Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24903

Unable to read the text from QLiteHtmlWidget with Squish, needed for RTA

    XMLWordPrintable

Details

    • 8f4a9d8e9b9b46dad8f3d6a683544f53dd1c23f3 (qt-creator/qt-creator/4.14)

    Description

      RTA uses Squish for verifying that Qt helps are registered correctly on Creator after installing content from online installer. Test installs Qt and Creator, launches Creator and verifies that when clicking help items in Creator UI (in Help-view) document content is then visible on the panel on the right side and content is not 'Document not available' or similar.

      Creator 4.14.0 changed to use QLiteHtmlWidget (instead of TextBrowserHelpWidget) that is causing issues now for Squish: it can not access the text content of the widget.

      This is what I got from Squish support:
      "The recommended way of resolving this problem would be to modify the QLiteHtmlWidget class to include some sort of "plaintext" property.

      If it is declared using the Q_PROPERTY() macro, Squish should be able to access it just as any other property"

      Would it be possible to add this 'plaintext' property? Otherwise RTA can not do proper verification for documentation content on Creator UI. That has have issues in the past, so I consider this test to be important test to automatize.

      Attachments

        1. objects.map
          1 kB
        2. test.py
          0.8 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes