litehtml: Add method for retrieving current html content

For squish testing.

Fixes: QTCREATORBUG-24903
Change-Id: Id9b21c6be306db9b3ed0e70c23923f39fae2d210
Reviewed-by: Robert Loehning <robert.loehning@qt.io>